<resources>
    <string name="app_name">LumkaApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="user_pic">https://www.sunsetlearning.com/wp-content/uploads/2019/09/User-Icon-Grey-300x300.png</string>
    <string name="insights">Insights</string>
    <string name="fake_call">Fake Call</string>
    <string name="danger_alert">Danger Alert</string>
    <string name="sos">SOS</string>
    <string name="location_status">Location Status</string>
    <string name="nortification">Nortification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="amount">Amount</string>

</resources>