<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/nav_fake_call"
        android:title="@string/fake_call"
        android:icon="@drawable/ic_fake_call" />
    <item
        android:id="@+id/nav_danger_alert"
        android:title="@string/danger_alert"
        android:icon="@drawable/ic_danger_alert"/>



    <item
        android:id="@+id/nav_sos"
        android:title="@string/sos"
        android:icon="@drawable/ic_sos" />

    <item
        android:id="@+id/nav_location_status"
        android:title="@string/location_status"
        android:icon="@drawable/ic_location_status" />

    <item
        android:id="@+id/nav_nortification"
        android:title="@string/nortification"
        android:icon="@drawable/ic_nortifications" />
</menu>